--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,14 @@
 		</dependencies>
 	</dependencyManagement>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>Notabarista Github Packages</name>
+            <url>https://maven.pkg.github.com/notabarista/be-admin-service</url>
+        </repository>
+    </distributionManagement>
+
 	<build>
 		<plugins>
 			<plugin>
